tests/characterization/snapshots/command_help__manager_stop.snap
---
source: tests/characterization/help.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus manager stop
--- stderr ---
--- end ---
