tests/characterization/snapshots/command_help__manager_update.snap
---
source: tests/characterization/help.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus manager update
--- stderr ---
--- end ---
